# specification-module/src/main/resources/openapi.yaml
@@ -31,12 +31,15 @@ paths:
         content:
           '*/*':
             schema:
-              $ref: '#/components/schemas/User'
+              $ref: '#/components/schemas/UserDto'
         required: true
       responses:
-        default:
+        200:
           description: successful operation
-          content: {}
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UserDto'
       x-codegen-request-body-name: body
   /user/{email}:
     get:
@@ -57,7 +60,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/User'
+                $ref: '#/components/schemas/UserDto'
         404:
           description: User not found
           content: {}
@@ -79,7 +82,7 @@ paths:
         content:
           '*/*':
             schema:
-              $ref: '#/components/schemas/User'
+              $ref: '#/components/schemas/UserDto'
         required: true
       responses:
         200:
@@ -87,7 +90,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/User'
+                $ref: '#/components/schemas/UserDto'
         400:
           description: Invalid user supplied
           content: {}
@@ -120,7 +123,7 @@ paths:
           content: {}
 components:
   schemas:
-    User:
+    UserDto:
       type: object
       properties:
         id:
